Добавляет разметку крупных смысловых разделов; Добавляет поиск по каталогу и отправку формы; Добавляет раздел "О нас".

--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+  <nav>
+    <h1>device</h1>
+    <form action='#' method="get">
+      <input type="text" name="search" id='catalogue-search' value="Текст поиска">
+      <input type="submit" value="Найти">
+      <input type="submit" value="Войти">
+    </form>
+  </nav>
+    <header class="main-header">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    </header>
+    <main>
+      <section>
+        <h1>О нас</h1>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+        <ul>
+          <li><b>Меловые линии</b></li>
+          <li><b>СДИК</b></li>
+          <li><b>ТоксБерри</b></li>
+        </ul>
+        <a href='#'>ПОДРОБНЕЕ О НАС</a>
+      </section>
+
+    </main>
+    <footer class="main-footer">
+
+    </footer>
 
   </body>
 </html>
