Добавляет новые классы -- products и companies, user-menu; Добавляет списки к классу products

--- a/index.html
+++ b/index.html
@@ -12,12 +12,30 @@
       <input type="submit" value="Найти">
       <input type="submit" value="Войти">
     </form>
+    <ul class="user-menu">
+      <li>Доставка</li>
+      <li>Гарантия</li>
+      <li>Контакты</li>
+    </ul>
   </nav>
     <header class="main-header">
+      <section class="products">
+        <!--<h2>Товары</h2>-->
+        <ul>
+          <li><h3>Виртуальная
+          реальность</h3></li>
+          <li><h3>Моноподы
+          для селфи</h3></li>
+          <li><h3>Экшн-камеры</h3></li>
+          <li><h3>Фитнес-браслеты</h3></li>
+          <li><h3>Умные часы</h3></li>
+          <li><h3>Квадрокоптеры</h3></li>
+        </ul>
+      </section>
 
     </header>
     <main>
-      <section>
+      <section class="companies">
         <h1>О нас</h1>
         <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
         <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
