--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   <header class="main-header">
-    <nav>
+    <nav class="main-navigation">
       <h1>device</h1>
     <form action='#' method="post">
       <!--<label for="catalogue-search">Текст поиска</label>-->
@@ -16,22 +16,24 @@
       <input type="submit" value="Сравнить">
       <input type="submit" value="Корзина">
     </form>
-    <label for="catalogue-button-search">КАТАЛОГ ТОВАРОВ</label>
-    <input type="button" name="button-search" id='catalogue-button-search'>
-    </nav>
-    <ul class="user-menu">
-      <li class="delivery-user-menu">
-        <a href="#">Доставка</a>
+    <form>
+      <label for="catalogue-button-search">КАТАЛОГ ТОВАРОВ</label>
+      <input type="button" name="button-search" id='catalogue-button-search'>
+    </form>
+    <ul class="navigation-menu">
+      <li class="delivery-navigation-item">
+        <a class='delivery-navigation-link' href="#">Доставка</a>
       </li>
-      <li class="warranty-user-menu">
-        <a href="#">Гарантия</a>
+      <li class="warranty-navigation-item">
+        <a class='warranty-navigation-link' href="#">Гарантия</a>
       </li>
-      <li class="contacts-user-menu">
-        <a href="#">Контакты</a>
+      <li class="contacts-navigation-item">
+        <a class='contacts-navigation-link' href="#">Контакты</a>
       </li>
     </ul>
+    </nav>
   </header>
-  <main>
+  <main class="main-index">
     <img src="#" width="560" height="560" alt='Квадрокоптер'>
       <p>Порхает как бабочка, <br> жалит как пчела!</br></p>
       <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
@@ -49,7 +51,7 @@
       </table>
 
       <section class="products">
-        <!--<h2>Товары</h2>-->
+        <h2 class="visually-hidden">Товары</h2>
         <ul>
             <img src="#" width="160" height="160" alt='Виртуальная реальность'>
           <li><h4>Виртуальная<br>
@@ -68,16 +70,19 @@
         </ul>
       </section>
     <section>
-      <a href="#">Доставка</a>
-      <a href="#">Гарантия</a>
-      <a href="#">Кредит</a>
       <h2>Доставка</h2>
+      <ul>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарантия</a></li>
+        <li><a href="#">Кредит</a></li>
+      </ul>
       <p>Мы с удовольствием доставим ваш товар прямо
         к вашему подъезду совершенно бесплатно! Ведь
         мы неплохо заработаем, поднимая его на ваш этаж.</p>
+      <strong>Доставим редкий товар под заказ</strong>
     </section>
 
-      <section class="companies">
+    <section class="companies">
         <h2>О нас</h2>
         <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
         <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
@@ -87,7 +92,21 @@
           <li><b>ТоксБерри</b></li>
         </ul>
         <a href='#'>ПОДРОБНЕЕ О НАС</a>
-      </section>
+    </section>
+    <section>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис.</p>
+        <p>Заодно сможете проверить работоспособность покупки. </p>
+        <h3>Интернет-магазин «Девайс»</h3>
+        <address>
+        Санкт-Петербург, набережная реки Карповки, 5, литера П.<br>
+        Тел.: +7 (812) 812-12-12
+        </address>
+        <h3>Время работы</h3>
+        <p>пн—пт: с 10:00 до 22:00<br>
+          сб—вс: с 10:00 до 19:00</p>
+        <a href="#">НАПИШИТЕ НАМ</a>
+    </section>
 
     </main>
     <footer class="main-footer">
