--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <h1>device</h1>
+      <h1 class="visually-hidden">device</h1>
+      <img class="logo" src="#" alt="Логотип магазина товаров device">
     <form action='#' method="post">
       <!--<label for="catalogue-search">Текст поиска</label>-->
       <input type="text" name="search" id='catalogue-search' placeholder="Текст поиска">
@@ -35,6 +36,11 @@
   </header>
   <main class="main-index">
     <img src="#" width="560" height="560" alt='Квадрокоптер'>
+    <nav class="pagination">
+      <a href="#">Вперед &gt;</a>
+      <a href="#">Вперед &gt;</a>
+      <a title="Последний слайдер">&lt;Назад</a>
+    </nav>
       <p>Порхает как бабочка, <br> жалит как пчела!</br></p>
       <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
       <a href="#">ПОДРОБНЕЕ</a>
@@ -52,44 +58,44 @@
 
       <section class="products">
         <h2 class="visually-hidden">Товары</h2>
-        <ul>
+        <ul class="products-list">
             <img src="#" width="160" height="160" alt='Виртуальная реальность'>
-          <li><h4>Виртуальная<br>
-          реальность</h4></li>
+          <li class="products-item"><h3>Виртуальная<br>
+          реальность</h3></li>
             <img src="#" width="160" height="160" alt='Моноподы для селфи'>
-          <li><h4>Моноподы<br>
-          для селфи</h4></li>
+          <li class="products-item"><h3>Моноподы<br>
+          для селфи</h3></li>
             <img src="#" width="160" height="160" alt='Экшн-камеры'>
-          <li><h4>Экшн-камеры</h4></li>
+          <li class="products-item"><h3>Экшн-камеры</h3></li>
             <img src="#" width="160" height="160" alt='Фитнес-браслеты'>
-          <li><h4>Фитнес-браслеты</h4></li>
+          <li class="products-item"><h3>Фитнес-браслеты</h3></li>
             <img src="#" width="160" height="160" alt='Умные часы'>
-          <li><h4>Умные часы</h4></li>
+          <li class="products-item"><h3>Умные часы</h3></li>
             <img src="#" width="160" height="160" alt='Квадрокоптеры'>
-          <li><h4>Квадрокоптеры</h4></li>
+          <li class="products-item"><h3>Квадрокоптеры</h3></li>
         </ul>
       </section>
-    <section>
-      <h2>Доставка</h2>
-      <ul>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Гарантия</a></li>
-        <li><a href="#">Кредит</a></li>
+    <section class="advantages">
+      <h2 class="advantages-title">Доставка</h2>
+      <ul class="advantages-list">
+        <li class="advantages-item"><a href="#">Доставка</a></li>
+        <li class="advantages-item"><a href="#">Гарантия</a></li>
+        <li class="advantages-item"><a href="#">Кредит</a></li>
       </ul>
-      <p>Мы с удовольствием доставим ваш товар прямо
+      <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо
         к вашему подъезду совершенно бесплатно! Ведь
         мы неплохо заработаем, поднимая его на ваш этаж.</p>
       <strong>Доставим редкий товар под заказ</strong>
     </section>
 
     <section class="companies">
-        <h2>О нас</h2>
-        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-        <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
-        <ul>
-          <li><b>Меловые линии</b></li>
-          <li><b>СДИК</b></li>
-          <li><b>ТоксБерри</b></li>
+        <h2 class="companies-title">О нас</h2>
+        <p class="companies-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.<br>
+          Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+        <ul class="companies-list">
+          <li class="companies-item"><b>Меловые линии</b></li>
+          <li class="companies-item"><b>СДИК</b></li>
+          <li class="companies-item"><b>ТоксБерри</b></li>
         </ul>
         <a href='#'>ПОДРОБНЕЕ О НАС</a>
     </section>
