--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <h1 class="visually-hidden">device</h1>
-      <img class="logo" src="#" alt="Логотип магазина товаров device">
-    <form action='#' method="post">
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Девайс</title>
+</head>
+<body>
+<header class="main-header">
+  <nav class="main-navigation">
+    <h1 class="visually-hidden">device</h1>
+    <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+    <form class="search-form" action='#' method="post">
       <!--<label for="catalogue-search">Текст поиска</label>-->
-      <input type="text" name="search" id='catalogue-search' placeholder="Текст поиска">
-      <input type="submit" value="Найти">
-      <input type="submit" value="Войти">
-      <input type="submit" value="Сравнить">
-      <input type="submit" value="Корзина">
+      <input name="search-text" type="text" id='catalogue-search-id' placeholder="Текст поиска">
+      <input name="search" type="submit" id='search-id' value="Найти">
+      <input name="log-on" type="submit" id='log-on-id' value="Войти">
+      <input name="compare" type="submit" id='compare-id' value="Сравнить">
+      <input name="shopping-cart" type="submit" id='shopping-cart-id' value="Корзина">
     </form>
     <form>
-      <label for="catalogue-button-search">КАТАЛОГ ТОВАРОВ</label>
-      <input type="button" name="button-search" id='catalogue-button-search'>
+      <label for="catalogue-search-button">КАТАЛОГ ТОВАРОВ</label>
+      <input type="button" name="button-search" id='catalogue-search-button'>
     </form>
     <ul class="navigation-menu">
       <li class="delivery-navigation-item">
@@ -32,109 +32,170 @@
         <a class='contacts-navigation-link' href="#">Контакты</a>
       </li>
     </ul>
-    </nav>
-  </header>
-  <main class="main-index">
-    <img src="#" width="560" height="560" alt='Квадрокоптер'>
-    <nav class="pagination">
-      <a href="#">Вперед &gt;</a>
-      <a href="#">Вперед &gt;</a>
-      <a title="Последний слайдер">&lt;Назад</a>
-    </nav>
-      <p>Порхает как бабочка, <br> жалит как пчела!</br></p>
-      <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-      <a href="#">ПОДРОБНЕЕ</a>
-      <br>
-      <table>
-        <tr>
-          <td>Дальность полета</td>
-          <td>Радиус поражения</td>
+  </nav>
+</header>
+<main class="main-index">
+  <h2 class="visually-hidden">Описание товаров</h2>
+  <img class="slider-image" src="" alt="Примеры товаров">
+  <button class="slider-button slider-prev" type="button">
+    <span class="visually-hidden">Предыдущее фото</span>
+  </button>
+  <button class="slider-button slider-next" type="button">
+    <span class="visually-hidden">Следующее фото</span>
+  </button>
+
+  <ol class="slider-pagination">
+    <li class="slider-pagination-item">
+      <h3 class="visually-hidden">Товар Квадрокоптер </h3>
+      <img src='#' alt="Квадрокоптер">
+      <button class="slider-pagination-button slider-pagination-button-current" type="button">
+        <span class="visually-hidden">1 фото</span>
+      </button>
+      <p class="quadcopter-description-ad">Порхает как бабочка, <br> жалит как пчела!<br></p>
+      <p class="quadcopter-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером,
+        замаскированным под стандартную камеру.</p>
+      <a class="button" href="#">ПОДРОБНЕЕ</a>
+      <table class="quadcopter-table">
+        <tr class="quadcopter-row">
+          <td class="quadcopter-data">Дальность полета</td>
+          <td class="quadcopter-data">Радиус поражения</td>
         </tr>
-        <tr>
-          <td>800 м</td>
-          <td>50 м</td>
+        <tr class="quadcopter-row">
+          <td class="quadcopter-number">800 м</td>
+          <td class="quadcopter-number">50 м</td>
         </tr>
       </table>
+    </li>
+    <li class="slider-pagination-item">
+      <h3 class="visually-hidden">Товар Фитнес-браслет </h3>
+      <img src='#' alt="Фитнес-браслет">
+      <button class="slider-pagination-button" type="button">
+        <span class="visually-hidden">2 фото</span>
+      </button>
+      <p class="watch-description-ad">Худеем<br>правильно!</p>
+      <p class="watch-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+      <a class="button" href="#">ПОДРОБНЕЕ</a>
+      <p class="watch-description-hour">48 часов</p>
+      <p class="watch-description-charge">Без подзарядки</p>
+    </li>
+    <li class="slider-pagination-item">
+      <h3 class="visually-hidden">Товар Палка для селфи </h3>
+      <img src='#' alt="Палка для селфи">
+      <button class="slider-pagination-button" type="button">
+        <span class="visually-hidden">3 фото</span>
+      </button>
+      <p class="selfies-description-ad">Делай селфи,<br>как Бен Стиллер! </p>
+      <p class="selfies-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
+      <a class="button" href="#">ПОДРОБНЕЕ</a>
+      <table class="selfies-table">
+        <tr class="selfies-row">
+          <td class="selfies-data">Длина палки</td>
+          <td class="selfies-data">Вес палки</td>
+          <td class="selfies-data">Материал</td>
+        </tr>
+        <tr class="selfies-row">
+          <td class="selfies-number">8,5 м</td>
+          <td class="selfies-number">5 кг</td>
+          <td class="selfies-number">Карбон</td>
+        </tr>
+      </table>
+    </li>
+  </ol>
 
-      <section class="products">
-        <h2 class="visually-hidden">Товары</h2>
-        <ul class="products-list">
-            <img src="#" width="160" height="160" alt='Виртуальная реальность'>
-          <li class="products-item"><h3>Виртуальная<br>
-          реальность</h3></li>
-            <img src="#" width="160" height="160" alt='Моноподы для селфи'>
-          <li class="products-item"><h3>Моноподы<br>
-          для селфи</h3></li>
-            <img src="#" width="160" height="160" alt='Экшн-камеры'>
-          <li class="products-item"><h3>Экшн-камеры</h3></li>
-            <img src="#" width="160" height="160" alt='Фитнес-браслеты'>
-          <li class="products-item"><h3>Фитнес-браслеты</h3></li>
-            <img src="#" width="160" height="160" alt='Умные часы'>
-          <li class="products-item"><h3>Умные часы</h3></li>
-            <img src="#" width="160" height="160" alt='Квадрокоптеры'>
-          <li class="products-item"><h3>Квадрокоптеры</h3></li>
-        </ul>
-      </section>
-    <section class="advantages">
-      <h2 class="advantages-title">Доставка</h2>
-      <ul class="advantages-list">
-        <li class="advantages-item"><a href="#">Доставка</a></li>
-        <li class="advantages-item"><a href="#">Гарантия</a></li>
-        <li class="advantages-item"><a href="#">Кредит</a></li>
-      </ul>
-      <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо
-        к вашему подъезду совершенно бесплатно! Ведь
-        мы неплохо заработаем, поднимая его на ваш этаж.</p>
-      <strong>Доставим редкий товар под заказ</strong>
-    </section>
+  <section class="products">
+    <h2 class="visually-hidden">Товары</h2>
+    <ul class="products-list">
+      <img src="#" width="160" height="160" alt='Виртуальная реальность'>
+      <li class="products-item"><h3>Виртуальная<br>
+        реальность</h3></li>
+      <img src="#" width="160" height="160" alt='Моноподы для селфи'>
+      <li class="products-item"><h3>Моноподы<br>
+        для селфи</h3></li>
+      <img src="#" width="160" height="160" alt='Экшн-камеры'>
+      <li class="products-item"><h3>Экшн-камеры</h3></li>
+      <img src="#" width="160" height="160" alt='Фитнес-браслеты'>
+      <li class="products-item"><h3>Фитнес-браслеты</h3></li>
+      <img src="#" width="160" height="160" alt='Умные часы'>
+      <li class="products-item"><h3>Умные часы</h3></li>
+      <img src="#" width="160" height="160" alt='Квадрокоптеры'>
+      <li class="products-item"><h3>Квадрокоптеры</h3></li>
+    </ul>
+  </section>
+  <section class="advantages">
+    <h2 class="advantages-title">Доставка</h2>
+    <ul class="advantages-list">
+      <li class="advantages-item"><a href="#">Доставка</a></li>
+      <li class="advantages-item"><a href="#">Гарантия</a></li>
+      <li class="advantages-item"><a href="#">Кредит</a></li>
+    </ul>
+    <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо
+      к вашему подъезду совершенно бесплатно! Ведь
+      мы неплохо заработаем, поднимая его на ваш этаж.</p>
+    <strong class="">Доставим редкий товар под заказ</strong>
+  </section>
 
-    <section class="companies">
-        <h2 class="companies-title">О нас</h2>
-        <p class="companies-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.<br>
-          Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
-        <ul class="companies-list">
-          <li class="companies-item"><b>Меловые линии</b></li>
-          <li class="companies-item"><b>СДИК</b></li>
-          <li class="companies-item"><b>ТоксБерри</b></li>
-        </ul>
-        <a href='#'>ПОДРОБНЕЕ О НАС</a>
-    </section>
-    <section>
-        <h2>Контакты</h2>
-        <p>Вы можете забрать товар сами, заехав в наш офис.</p>
-        <p>Заодно сможете проверить работоспособность покупки. </p>
-        <h3>Интернет-магазин «Девайс»</h3>
-        <address>
-        Санкт-Петербург, набережная реки Карповки, 5, литера П.<br>
-        Тел.: +7 (812) 812-12-12
-        </address>
-        <h3>Время работы</h3>
-        <p>пн—пт: с 10:00 до 22:00<br>
-          сб—вс: с 10:00 до 19:00</p>
-        <a href="#">НАПИШИТЕ НАМ</a>
-    </section>
+  <section class="companies">
+    <h2 class="companies-title">О нас</h2>
+    <p class="companies-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из
+      нас.<br>
+      Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+    <ul class="companies-list">
+      <li class="companies-item"><b>Меловые линии</b></li>
+      <li class="companies-item"><b>СДИК</b></li>
+      <li class="companies-item"><b>ТоксБерри</b></li>
+    </ul>
+    <a class="button" href='#'>ПОДРОБНЕЕ О НАС</a>
+  </section>
+  <section class="contacts">
+    <h2 class="contacts-title">Контакты</h2>
+    <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис.</p>
+    <p class="contacts-description">Заодно сможете проверить работоспособность покупки. </p>
+    <h3>Интернет-магазин «Девайс»</h3>
+    <address class="contacts-address">
+      <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+      <a class="contacts-phone" href="tel: +78128121212">+7 (812) 812-12-12</a>
+    </address>
+    <h3 class="contacts-subtitle">Время работы</h3>
+    <ul class="contacts-schedule">
+      <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
+      <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
+    </ul>
+    <a class="button" href="#">НАПИШИТЕ НАМ</a>
+  </section>
+  <section class="newsletter">
+    <h2 class="newsletter-title">Подпишитесь<br>
+      на рассылку</h2>
+    <p class="newsletter-description">Еженедельный дайджест с обзорами новинок,<br>
+      длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+    <p class="newsletter-tick">Это бесплатно</p>
+    <form class="newsletter-subscriber" action='#' method="post">
+      <input type="email" name="newsletter-email" id='newsletter-mail' placeholder="Ваш e-mail">
+      <input type="submit" value="ПОДПИСАТЬСЯ">
+    </form>
+  </section>
+</main>
 
-    </main>
-    <footer class="main-footer">
-      <h2>device</h2>
-      <address>
-        Санкт-Петербург, набережная<br>
-        реки Карповки, 5, литера П.
-        Тел.: +7 (812) 812-12-12
-      </address>
-      <ul class="user-menu user-menu-footer">
-        <li>
-          <a href="#">Доставка</a>
-        </li>
-        <li>
-          <a href="#">Гарантия</a>
-        </li>
-        <li>
-          <a href="#">Контакты</a>
-        </li>
-      </ul>
-      <p><small>.html academy</small></p>
-    </footer>
+<footer class="main-footer">
+  <h2 class="visually-hidden">device</h2>
+  <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+  <address>
+    <h2 class="visually-hidden">Контакты</h2>
+    <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
+      реки Карповки, 5, литера П.</p>
+    <a class="footer-contacts-phone" href="tel: +78128121212">+7 (812) 812-12-12</a>
+  </address>
+  <ul class="navigation-menu menu-footer">
+    <li class="delivery-navigation-item menu-footer-item">
+      <a class='delivery-navigation-link menu-footer-link' href="#">Доставка</a>
+    </li>
+    <li class="warranty-navigation-item menu-footer-item">
+      <a class='warranty-navigation-link menu-footer-link' href="#">Гарантия</a>
+    </li>
+    <li class="contacts-navigation-item menu-footer-item">
+      <a class='contacts-navigation-link menu-footer-link' href="#">Контакты</a>
+  </ul>
+  <p><small>.html academy</small></p>
+</footer>
 
-  </body>
+</body>
 </html>
