--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </form>
     <form>
       <label for="catalogue-search-button">КАТАЛОГ ТОВАРОВ</label>
-      <input type="button" name="button-search" id='catalogue-search-button'>
+      <input type="button" name="button-search" id='catalogue-search-button' value="Открыть">
     </form>
     <ul class="navigation-menu">
       <li class="delivery-navigation-item">
@@ -36,7 +36,7 @@
 </header>
 <main class="main-index">
   <h2 class="visually-hidden">Описание товаров</h2>
-  <img class="slider-image" src="" alt="Примеры товаров">
+  <img class="slider-image" src="#" alt="Примеры товаров">
   <button class="slider-button slider-prev" type="button">
     <span class="visually-hidden">Предыдущее фото</span>
   </button>
@@ -104,20 +104,20 @@
 
   <section class="products">
     <h2 class="visually-hidden">Товары</h2>
+    <img src="#" width="160" height="160" alt='Виртуальная реальность'>
+    <img src="#" width="160" height="160" alt='Моноподы для селфи'>
+    <img src="#" width="160" height="160" alt='Экшн-камеры'>
+    <img src="#" width="160" height="160" alt='Фитнес-браслеты'>
+    <img src="#" width="160" height="160" alt='Умные часы'>
+    <img src="#" width="160" height="160" alt='Квадрокоптеры'>
     <ul class="products-list">
-      <img src="#" width="160" height="160" alt='Виртуальная реальность'>
       <li class="products-item"><h3>Виртуальная<br>
         реальность</h3></li>
-      <img src="#" width="160" height="160" alt='Моноподы для селфи'>
       <li class="products-item"><h3>Моноподы<br>
         для селфи</h3></li>
-      <img src="#" width="160" height="160" alt='Экшн-камеры'>
       <li class="products-item"><h3>Экшн-камеры</h3></li>
-      <img src="#" width="160" height="160" alt='Фитнес-браслеты'>
       <li class="products-item"><h3>Фитнес-браслеты</h3></li>
-      <img src="#" width="160" height="160" alt='Умные часы'>
       <li class="products-item"><h3>Умные часы</h3></li>
-      <img src="#" width="160" height="160" alt='Квадрокоптеры'>
       <li class="products-item"><h3>Квадрокоптеры</h3></li>
     </ul>
   </section>
@@ -153,7 +153,7 @@
     <h3>Интернет-магазин «Девайс»</h3>
     <address class="contacts-address">
       <p class="contacts-address-text">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
-      <a class="contacts-phone" href="tel: +78128121212">+7 (812) 812-12-12</a>
+      <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
     </address>
     <h3 class="contacts-subtitle">Время работы</h3>
     <ul class="contacts-schedule">
@@ -182,7 +182,7 @@
     <h2 class="visually-hidden">Контакты</h2>
     <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
       реки Карповки, 5, литера П.</p>
-    <a class="footer-contacts-phone" href="tel: +78128121212">+7 (812) 812-12-12</a>
+    <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
   </address>
   <ul class="navigation-menu menu-footer">
     <li class="delivery-navigation-item menu-footer-item">
@@ -194,6 +194,24 @@
     <li class="contacts-navigation-item menu-footer-item">
       <a class='contacts-navigation-link menu-footer-link' href="#">Контакты</a>
   </ul>
+  <ul class="footer-social-list">
+    <li class="footer-social-item">
+      <a class="button" href="https://t.me/htmlacademy">
+        <span class="visually-hidden">Telegram</span>
+      </a>
+    </li>
+    <li class="footer-social-item">
+      <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+        <span class="visually-hidden">YouTube</span>
+      </a>
+    </li>
+    <li class="footer-social-item">
+      <a class="button" href="https://twitter.com/htmlacademy_ru">
+        <span class="visually-hidden">Twitter</span>
+      </a>
+    </li>
+  </ul>
+  <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
   <p><small>.html academy</small></p>
 </footer>
 
