Добавляет header, footer, main; Добавляет фильтр по цвету и bluetooth; Добавляет кнопку 'показать';

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>HTML Academy: Девайс</title>
 </head>
 <body>
-<header class="main-header">
+<header class="page-header">
   <nav class="main-navigation">
     <h1 class="visually-hidden">device</h1>
     <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
@@ -214,6 +214,5 @@
   <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
   <p><small>.html academy</small></p>
 </footer>
-
 </body>
 </html>
