--- a/catalog.html
+++ b/catalog.html
@@ -120,10 +120,56 @@
   </form>
 
   <select class="select-control" aria-label="Сортировка">
-    <option value="popular">Сначала популярное</option>
-    <option value="cheap">Сначала дешёвое</option>
-    <option value="expensive">Сначала дорогое</option>
+    <option value="popular">Популярное</option>
+    <option value="new-products">Новинки</option>
+    <option value="price">Цена</option>
   </select>
+  <a href="#" class="button button-light">
+    <span class="visually-hidden">От наилучших</span>
+  </a>
+  <a class="button" href="#">
+    <span class="visually-hidden">От наихудших</span>
+  </a>
+
+  <ul class="product-list">
+    <li class="product-card">
+    <a class="product-card-link" href="product.html">
+      <img class="product-card-image" src="#" alt="Любительская селфи-палка">
+      <h3 class="product-card-title">Любительская<br>
+        селфи-палка</h3>
+    </a>
+    <span class="product-card-price">500 ₽</span>
+    <a class="product-card-button button" href="#">Подробнее</a>
+  </li>
+
+    <li class="product-card">
+      <a class="product-card-link" href="#">
+        <img class="product-card-image" src="#" alt="Профессиональная селфи-палка">
+        <h3 class="product-card-title">Профессиональная селфи-палка</h3>
+      </a>
+      <span class="product-card-price">1 500 ₽</span>
+      <a class="product-card-button button" href="#">Подробнее</a>
+    </li>
+    <li class="product-card">
+      <a class="product-card-link" href="#">
+        <img class="product-card-image" src="#" alt="Непотопляемая селфи-палка">
+        <h3 class="product-card-title">Непотопляемая<br>
+          селфи-палка</h3>
+      </a>
+      <span class="product-card-price">2 500 ₽</span>
+      <a class="product-card-button button" href="#">Подробнее</a>
+    </li>
+    <li class="product-card">
+      <a class="product-card-link" href="#">
+        <img class="product-card-image" src="#" alt="Селфи-палка «Следуй за мной»">
+        <h3 class="product-card-title">Селфи-палка «Следуй за мной»</h3>
+      </a>
+      <span class="product-card-price">1 500 ₽</span>
+      <a class="product-card-button button" href="#">Подробнее</a>
+    </li>
+  </ul>
+
+</section>
 
 </main>
 
