--- a/catalog.html
+++ b/catalog.html
@@ -169,6 +169,35 @@
     </li>
   </ul>
 
+  <ul class="pagination">
+    <li class="pagination-item">
+      <a class="pagination-link pagination-prev pagination-disabled">
+        <span class="visually-hidden">Назад</span>
+      </a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link pagination-current">1</a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link" href="#">2</a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link" href="#">3</a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link" href="#">...</a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link" href="#">15</a>
+    </li>
+    <li class="pagination-item">
+      <a class="pagination-link pagination-next" href="#">
+        <span class="visually-hidden">Вперёд</span>
+      </a>
+    </li>
+  </ul>
+  <button class="button pagination-show-more" type="button">Загрузить еще</button>
+
 </section>
 
 </main>
