Добавляет небольшую поправку к .html academy.

--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
       </a>
     </li>
   </ul>
-  <p class="about-text">Сделано в <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a></p>
-  <p><small>.html academy</small></p>
+  <a class="htmlacademy-link" href="https://htmlacademy.ru/"><small>.html academy</small></a>
 </footer>
 </body>
 </html>
