Добавляет небольшие изменения, никак существенно не влияя.

--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
       <p class="watch-description-charge">Без подзарядки</p>
     </li>
     <li class="slider-pagination-item">
-      <h3 class="visually-hidden">Товар Палка для селфи </h3>
+      <h3 class="visually-hidden">Товар Палка для селфи</h3>
       <img src='#' alt="Палка для селфи">
       <button class="slider-pagination-button" type="button">
         <span class="visually-hidden">3 фото</span>
       </button>
       <p class="selfies-description-ad">Делай селфи,<br>как Бен Стиллер! </p>
       <p class="selfies-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
-      <a class="button" href="#">ПОДРОБНЕЕ</a>
+      <a class="button" href="catalog.html">ПОДРОБНЕЕ</a>
       <table class="selfies-table">
         <tr class="selfies-row">
           <td class="selfies-data">Длина палки</td>
@@ -178,8 +178,8 @@
 <footer class="main-footer">
   <h2 class="visually-hidden">device</h2>
   <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+  <h2 class="visually-hidden">Контакты</h2>
   <address>
-    <h2 class="visually-hidden">Контакты</h2>
     <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
       реки Карповки, 5, литера П.</p>
     <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
