--- a/catalog.html
+++ b/catalog.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="utf-8">
@@ -197,7 +197,6 @@
     </li>
   </ul>
   <button class="button pagination-show-more" type="button">Загрузить еще</button>
-
 </section>
 
 </main>
@@ -205,8 +204,8 @@
 <footer class="main-footer">
   <h2 class="visually-hidden">device</h2>
   <img class="logo" src="#" alt="Логотип интернет-магазина «Девайс»">
+  <h2 class="visually-hidden">Контакты</h2>
   <address>
-    <h2 class="visually-hidden">Контакты</h2>
     <p class="footer-contacts-address-text">Санкт-Петербург, набережная<br>
       реки Карповки, 5, литера П.</p>
     <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
