Добавляет изменение кнопок.

--- a/catalog.html
+++ b/catalog.html
@@ -13,9 +13,9 @@
       <!--<label for="catalogue-search">Текст поиска</label>-->
       <input name="search-text" type="text" id='catalogue-search-id' placeholder="Текст поиска">
       <input name="search" type="submit" id='search-id' value="Найти">
-      <input name="log-on" type="submit" id='log-on-id' value="Войти">
-      <input name="compare" type="submit" id='compare-id' value="Сравнить">
-      <input name="shopping-cart" type="submit" id='shopping-cart-id' value="Корзина">
+      <input name="log-on" type="button" id='log-on-id' value="Войти">
+      <input name="compare" type="button" id='compare-id' value="Сравнить">
+      <input name="shopping-cart" type="button" id='shopping-cart-id' value="Корзина">
     </form>
     <form>
       <label for="catalogue-search-button">КАТАЛОГ ТОВАРОВ</label>
