Добавляет оставшиеся слайдеры (доставка, гарантия, кредиты) + кнопки.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </table>
     </li>
     <li class="slider-pagination-item">
-      <h3 class="visually-hidden">Товар Фитнес-браслет </h3>
+      <h3 class="visually-hidden">Товар Фитнес-браслет</h3>
       <img src='#' alt="Фитнес-браслет">
       <button class="slider-pagination-button" type="button">
         <span class="visually-hidden">2 фото</span>
@@ -122,16 +122,35 @@
     </ul>
   </section>
   <section class="advantages">
-    <h2 class="advantages-title">Доставка</h2>
+    <h2 class='visually-hidden'>Преимущества</h2>
     <ul class="advantages-list">
-      <li class="advantages-item"><a href="#">Доставка</a></li>
-      <li class="advantages-item"><a href="#">Гарантия</a></li>
-      <li class="advantages-item"><a href="#">Кредит</a></li>
+      <li>
+      <h3 class="advantages-item">Доставка</h3>
+      <button class="advantages-item-button" type="button">
+        <span class="delivery-icon">Доставка</span>
+      </button>
+        <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо
+          к вашему подъезду совершенно бесплатно! Ведь
+          мы неплохо заработаем, поднимая его на ваш этаж.</p>
+      </li>
+      <li>
+        <h3 class="advantages-item">Гарантия</h3>
+        <button class="advantages-item-button" type="button">
+          <span class="warranty-icon">Гарантия</span>
+        </button>
+        <p class="advantages-description">Если из-за возгорания купленного у нас товара у вас
+          сгорит дом — не переживайте, мы выдадим вам новый.
+          Товар, не дом, конечно же.</p>
+      </li>
+      <li>
+        <h3 class="advantages-item">Кредит</h3>
+        <button class="advantages-item-button" type="button">
+          <span class="credit-icon">Кредит</span>
+        </button>
+        <p class="advantages-description">Залезть в долговую яму стало проще!
+          Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для банка, разумеется.</p>
+      </li>
     </ul>
-    <p class="advantages-description">Мы с удовольствием доставим ваш товар прямо
-      к вашему подъезду совершенно бесплатно! Ведь
-      мы неплохо заработаем, поднимая его на ваш этаж.</p>
-    <strong class="">Доставим редкий товар под заказ</strong>
   </section>
 
   <section class="companies">
