--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <header class="page-header">
     <nav class="main-navigation">
       <form class="search-form" action='#' method="post">
-        <!--<label for="catalogue-search">Текст поиска</label>-->
-        <input name="search-text" type="text" id='catalogue-search-id' placeholder="Текст поиска">
+        <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
+        <input name="search-text" type="text" id='catalogue-search' placeholder="Текст поиска">
         <input name="search" type="submit" id='search-id' value="Найти">
       </form>
         <button name="button log-on" type="button">
@@ -103,35 +103,41 @@
       <section class="product-category">
         <h2 class="visually-hidden">Товары</h2>
         <ul class="products-list">
-          <li class="products-item"><h3>Виртуальная<br>
-            реальность</h3>
+          <li class="products-item">
             <a href="#">
+              <h3>Виртуальная<br>
+                реальность</h3>
             <img src="#" width="160" height="160" alt='Виртуальная реальность'>
             </a>
           </li>
-          <li class="products-item"><h3>Моноподы<br>
-            для селфи</h3>
+          <li class="products-item">
             <a href="#">
-            <img src="#" width="160" height="160" alt='Моноподы для селфи'>
+              <h3>Моноподы<br>
+                для селфи</h3>
+              <img src="#" width="160" height="160" alt='Моноподы для селфи'>
             </a>
           </li>
-          <li class="products-item"><h3>Экшн-камеры</h3>
+          <li class="products-item">
             <a href="#">
-            <img src="#" width="160" height="160" alt='Экшн-камеры'>
+              <h3>Экшн-камеры</h3>
+              <img src="#" width="160" height="160" alt='Экшн-камеры'>
             </a>
           </li>
-          <li class="products-item"><h3>Фитнес-браслеты</h3>
+          <li class="products-item">
             <a href="#">
-            <img src="#" width="160" height="160" alt='Фитнес-браслеты'>
+              <h3>Фитнес-браслеты</h3>
+              <img src="#" width="160" height="160" alt='Фитнес-браслеты'>
             </a>
           </li>
-          <li class="products-item"><h3>Умные часы</h3>
+          <li class="products-item">
             <a href="#">
-            <img src="#" width="160" height="160" alt='Умные часы'>
+              <h3>Умные часы</h3>
+              <img src="#" width="160" height="160" alt='Умные часы'>
             </a>
           </li>
-          <li class="products-item"><h3>Квадрокоптеры</h3>
+          <li class="products-item">
             <a href="#">
+              <h3>Квадрокоптеры</h3>
               <img src="#" width="160" height="160" alt='Квадрокоптеры'>
             </a>
           </li>
