Добавляет классы к тегам внутри сексции с категориями товаров.

--- a/index.html
+++ b/index.html
@@ -101,43 +101,43 @@
     </section>
 
       <section class="product-category">
-        <h2 class="visually-hidden">Товары</h2>
+        <h2 class="visually-hidden">Категории товаров магазина</h2>
         <ul class="products-list">
           <li class="products-item">
-            <a href="#">
-              <h3>Виртуальная<br>
+            <a class="product-category-link" href="#">
+              <h3 class="product-category-subtitle">Виртуальная<br>
                 реальность</h3>
             <img src="#" width="160" height="160" alt='Виртуальная реальность'>
             </a>
           </li>
           <li class="products-item">
-            <a href="#">
-              <h3>Моноподы<br>
+            <a class="product-category-link" href="#">
+              <h3 class="product-category-subtitle">Моноподы<br>
                 для селфи</h3>
               <img src="#" width="160" height="160" alt='Моноподы для селфи'>
             </a>
           </li>
           <li class="products-item">
-            <a href="#">
-              <h3>Экшн-камеры</h3>
+            <a class="product-category-link" href="#">
+              <h3 class="product-category-subtitle">Экшн-камеры</h3>
               <img src="#" width="160" height="160" alt='Экшн-камеры'>
             </a>
           </li>
           <li class="products-item">
-            <a href="#">
-              <h3>Фитнес-браслеты</h3>
+            <a class="product-category-link" href="#">
+              <h3 class="product-category-subtitle">Фитнес-браслеты</h3>
               <img src="#" width="160" height="160" alt='Фитнес-браслеты'>
             </a>
           </li>
           <li class="products-item">
-            <a href="#">
-              <h3>Умные часы</h3>
+            <a class="product-category-link" href="#">
+              <h3 class="product-category-subtitle">Умные часы</h3>
               <img src="#" width="160" height="160" alt='Умные часы'>
             </a>
           </li>
           <li class="products-item">
-            <a href="#">
-              <h3>Квадрокоптеры</h3>
+            <a class="product-category-link" href="#">
+              <h3 class="product-category-subtitle">Квадрокоптеры</h3>
               <img src="#" width="160" height="160" alt='Квадрокоптеры'>
             </a>
           </li>
