:heavy_check_mark: Сборка #2

--- a/2/index.html
+++ b/2/index.html
@@ -112,7 +112,7 @@
             </a>
           </li>
           <li class="products-item">
-            <a class="product-category-link" href="#">
+            <a class="product-category-link" href="catalog.html">
               <h3 class="product-category-subtitle">Моноподы<br>
                 для селфи</h3>
               <img src="#" width="160" height="160" alt='Моноподы для селфи'>
