Добавляет изменения по замечаниям. Добавляет точки переключения.

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
       </a>
       <form class="search-form" action='#' method="post">
         <label for="catalogue-search" class="visually-hidden">Текст поиска</label>
-        <input name="search-text" type="text" id='catalogue-search' placeholder="Текст поиска">
+        <input name="search-text" type="text" id="catalogue-search" placeholder="Текст поиска">
         <input name="search" type="submit" id='search-id' value="Найти">
       </form>
       <button name="button log-on" type="button">
@@ -21,18 +21,18 @@
       <a class="compare" href="#">Сравнить</a>
       <a class="shopping-cart" href="#">Корзина</a>
 
-      <button class='button button-search' type="button">
+      <button class="button button-search" type="button">
         <span class="visually-hidden">КАТАЛОГ ТОВАРОВ</span>
       </button>
       <ul class="navigation-menu">
         <li class="navigation-menu-item">
-          <a class='delivery-navigation-link' href="#">Доставка</a>
+          <a class="delivery-navigation-link" href="#">Доставка</a>
         </li>
         <li class="navigation-menu-item">
-          <a class='warranty-navigation-link' href="#">Гарантия</a>
+          <a class="warranty-navigation-link" href="#">Гарантия</a>
         </li>
         <li class="navigation-menu-item">
-          <a class='contacts-navigation-link' href="#">Контакты</a>
+          <a class="contacts-navigation-link" href="#">Контакты</a>
         </li>
       </ul>
     </nav>
@@ -195,32 +195,32 @@
     </address>
     <ul class="navigation-menu menu-footer">
       <li class="delivery-navigation-item menu-footer-item">
-        <a class='delivery-navigation-link menu-footer-link' href="#">Доставка</a>
+        <a class="delivery-navigation-link menu-footer-link" href="#">Доставка</a>
       </li>
       <li class="warranty-navigation-item menu-footer-item">
-        <a class='warranty-navigation-link menu-footer-link' href="#">Гарантия</a>
+        <a class="warranty-navigation-link menu-footer-link" href="#">Гарантия</a>
       </li>
       <li class="contacts-navigation-item menu-footer-item">
-        <a class='contacts-navigation-link menu-footer-link' href="#">Контакты</a>
+        <a class="contacts-navigation-link menu-footer-link" href="#">Контакты</a>
     </ul>
     <ul class="footer-social-list">
       <li class="footer-social-item">
-        <a class="button" href="https://t.me/htmlacademy">
+        <a class="button" href="https://t.me/htmlacademy" target="_blank">
           <span class="visually-hidden">Telegram</span>
         </a>
       </li>
       <li class="footer-social-item">
-        <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+        <a class="button" href="https://www.youtube.com/user/htmlacademyru" target="_blank">
           <span class="visually-hidden">YouTube</span>
         </a>
       </li>
       <li class="footer-social-item">
-        <a class="button" href="https://twitter.com/htmlacademy_ru">
+        <a class="button" href="https://twitter.com/htmlacademy_ru" target="_blank">
           <span class="visually-hidden">Twitter</span>
         </a>
       </li>
     </ul>
-    <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+    <a class="htmlacademy-link" href="https://htmlacademy.ru/" target="_blank">.html academy</a>
   </footer>
 </body>
 </html>
