Добавляет изменения в h1 в main, название интернет-магазина.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </header>
 
   <main class="main-index">
-      <h1 class="visually-hidden">device</h1>
+      <h1 class="visually-hidden">«Девайс» интернет-магазин электроники</h1>
 
     <section class="best_products">
       <h2 class="visually-hidden">Лучшие товары магазина</h2>
